--- a/src/app/admin/settings/security/ip-list/ip-list.component.html
+++ b/src/app/admin/settings/security/ip-list/ip-list.component.html
@@ -1,23 +1,30 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label>IP 列表</nz-form-label>
+    <nz-form-label i18n>IP Address</nz-form-label>
     <nz-form-control [formArrayName]="this.key">
       <ng-container *ngFor="let x of list?.controls; index as i; first as isFirst">
         <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
-          <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入 IP 地址" />
+          <input
+            style="width: 90%"
+            type="text"
+            nz-input
+            [formControlName]="i"
+            placeholder="Please enter an IP address"
+            i18n-placeholder
+          />
           <button nz-button type="button" nzType="default" style="width: 10%" (click)="remove(i)">
             <i nz-icon nzType="minus-circle"></i>
           </button>
         </nz-input-group>
       </ng-container>
-      <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="append()">
-        <i nz-icon nzType="plus-circle"></i> 新增地址
+      <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="append()" i18n>
+        <i nz-icon nzType="plus-circle"></i> Add Address
       </button>
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
