--- a/src/app/admin/settings/security/ip-lock/ip-lock.component.html
+++ b/src/app/admin/settings/security/ip-lock/ip-lock.component.html
@@ -1,14 +1,7 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>非白名单登录失败上限</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      [nzAutoTips]="{
-        default: {
-          required: '次数不能为空'
-        }
-      }"
-    >
+    <nz-form-label nzRequired i18n>Maximum number of login failures for the user's host IP</nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.ip_login_failures">
       <nz-input-number
         style="width: 100%"
         formControlName="ip_login_failures"
@@ -21,6 +14,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
