--- a/src/app/admin/settings/security/pwd-ttl/pwd-ttl.component.html
+++ b/src/app/admin/settings/security/pwd-ttl/pwd-ttl.component.html
@@ -1,15 +1,7 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>密码有效期</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      nzExtra="0 为永久有效"
-      [nzAutoTips]="{
-        default: {
-          required: '天数不能为空'
-        }
-      }"
-    >
+    <nz-form-label nzRequired i18n>Password Expiration</nz-form-label>
+    <nz-form-control nzHasFeedback nzExtra="0 is permanent" i18n-nzExtra [nzAutoTips]="tips.pwd_ttl">
       <nz-input-number
         style="width: 100%"
         formControlName="pwd_ttl"
@@ -22,6 +14,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
