--- a/src/app/admin/settings/security/session/session.component.html
+++ b/src/app/admin/settings/security/session/session.component.html
@@ -1,14 +1,11 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>会话超时</nz-form-label>
+    <nz-form-label nzRequired>Session Timeout</nz-form-label>
     <nz-form-control
       nzHasFeedback
-      nzExtra="设置成功后会话开始渐进生效"
-      [nzAutoTips]="{
-        default: {
-          required: '时间不能为空'
-        }
-      }"
+      nzExtra="After the setting is successful, the session starts to take effect gradually"
+      i18n-nzExtra
+      [nzAutoTips]="tips.session_ttl"
     >
       <nz-input-number
         style="width: 100%"
@@ -22,6 +19,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
 </div>
