--- a/src/app/admin/settings/access-logs/access-logs.component.html
+++ b/src/app/admin/settings/access-logs/access-logs.component.html
@@ -9,10 +9,10 @@
       (ngModelChange)="getData(true)"
     ></nz-range-picker>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="Refresh" (click)="getData(true)">
+      <button nz-button nzType="text" nz-tooltip="Refresh" i18n-nz-tooltip (click)="getData(true)">
         <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nzType="text" nz-tooltip="Reset" (click)="clearSearch()">
+      <button nz-button nzType="text" nz-tooltip="Reset" i18n-nz-tooltip (click)="clearSearch()">
         <i nz-icon nzType="clear"></i>
       </button>
     </nz-button-group>
@@ -50,8 +50,8 @@
           (nzCheckedChange)="dataset.setNChecked($event)"
         >
         </th>
-        <th nzWidth="180px"><b i18n>Timestamp</b></th>
-        <th nzWidth="320px"><b i18n>Operator</b></th>
+        <th nzWidth="150px"><b i18n>Timestamp</b></th>
+        <th><b i18n>Operator</b></th>
         <th><b i18n>Resource</b></th>
         <th nzWidth="60px" nzRight nzAlign="center">
           <button nz-button nzType="text" nzBlock disabled>
@@ -76,13 +76,10 @@
           </td>
           <td>
             <a *ngIf="userKV[data.metadata.user_id] as user; else isSystem" (click)="openUserDetail(user)">
-              <span> {{ user.email }}</span>
-              <nz-divider nzType="vertical"></nz-divider>
-              <span>
-                <ng-container *ngIf="user.name; else noName">
-                  {{ user.name }}
-                </ng-container>
-              </span>
+              <ng-container *ngIf="user.name; else showEmail">
+                {{ user.name }}
+              </ng-container>
+              <ng-template #showEmail> {{ user.email }} </ng-template>
             </a>
             <ng-template #isSystem>
               <ng-container i18n>system</ng-container>
@@ -90,7 +87,7 @@
           </td>
           <td>
             <a (click)="openResourceDetail(data)">
-              <span>{{ data._id }}</span>
+              <code>{{ data._id }}</code>
               <nz-divider nzType="vertical"></nz-divider>
               <code>{{ data.metadata.method }} {{ data.metadata.path }}</code>
             </a>
@@ -111,8 +108,6 @@
   </nz-table>
 </nz-card>
 
-<ng-template #noName> None </ng-template>
-
 <nz-drawer
   [nzClosable]="false"
   [nzVisible]="userDetailVisible"
@@ -128,6 +123,7 @@
         <ng-container *ngIf="u.name; else noName">
           {{ u.name }}
         </ng-container>
+        <ng-template #noName> None </ng-template>
       </nz-descriptions-item>
       <nz-descriptions-item nzTitle="ID" [nzSpan]="2">{{ u._id }}</nz-descriptions-item>
       <nz-descriptions-item nzTitle="Avatar" [nzSpan]="2">{{ u.avatar }}</nz-descriptions-item>
@@ -177,7 +173,9 @@
 >
   <ng-container *nzDrawerContent>
     <nz-descriptions *ngIf="resourceDetail as r" nzBordered [nzColumn]="2">
-      <nz-descriptions-item nzTitle="ID" [nzSpan]="2">{{ r._id }}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="ID" [nzSpan]="2">
+        <code>{{ r._id }}</code>
+      </nz-descriptions-item>
       <nz-descriptions-item nzTitle="Url" [nzSpan]="2">
         <code>{{ r.metadata.method }} {{ r.metadata.path }}</code>
       </nz-descriptions-item>
