--- a/src/app/admin/settings/values/values.component.html
+++ b/src/app/admin/settings/values/values.component.html
@@ -23,7 +23,7 @@
 
 <ng-template #actions>
   <nz-space>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="form()" i18n> Add </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="form()" i18n> Create </button>
   </nz-space>
 </ng-template>
 
