--- a/src/app/admin/space/projects/projects.component.html
+++ b/src/app/admin/space/projects/projects.component.html
@@ -2,15 +2,22 @@
   <nz-row [nzGutter]="6">
     <nz-col>
       <nz-input-group style="width: 180px" nzSuffixIcon="search">
-        <input (keyup.enter)="submitSearch()" [(ngModel)]="searchText" type="text" nz-input placeholder="关键词搜索" />
+        <input
+          (keyup.enter)="submitSearch()"
+          [(ngModel)]="searchText"
+          type="text"
+          nz-input
+          placeholder="Search"
+          i18n-placeholder
+        />
       </nz-input-group>
     </nz-col>
     <nz-col>
       <nz-button-group>
-        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+        <button nz-button nzType="text" nz-tooltip="Refresh" i18n-nz-tooltip (click)="getData(true)">
           <i nz-icon nzType="reload"></i>
         </button>
-        <button nz-button nzType="text" nz-tooltip="重置" (click)="clearSearch()">
+        <button nz-button nzType="text" nz-tooltip="Reset" i18n-nz-tooltip (click)="clearSearch()">
           <i nz-icon nzType="clear"></i>
         </button>
       </nz-button-group>
@@ -19,7 +26,7 @@
 </ng-template>
 
 <ng-template #extraRef>
-  <button nz-button nzType="primary" (click)="form()"> 新增 </button>
+  <button nz-button nzType="primary" (click)="form()"> Create </button>
 </ng-template>
 
 <nz-card [nzTitle]="searchRef" [nzExtra]="extraRef">
@@ -48,16 +55,16 @@
         >
         </th>
         <th>
-          <b>项目名称 </b>
-          <i nz-icon nzType="tag" nz-tooltip="关键词"></i>
+          <b i18n>Project Name </b>
+          <i nz-icon nzType="tag"></i>
         </th>
         <th>
-          <b>APPID</b>
+          <b i18n>App Id</b>
         </th>
-        <th><b>状态</b></th>
-        <th nzWidth="200px"><b>有效期</b></th>
-        <th nzWidth="200px"><b>创建时间</b></th>
-        <th nzWidth="200px"><b>更新时间</b></th>
+        <th><b i18n>Status</b></th>
+        <th><b i18n>Validity Period</b></th>
+        <th nzWidth="200px"><b i18n>Create Time</b></th>
+        <th nzWidth="200px"><b i18n>Update Time</b></th>
         <th nzWidth="60px" nzRight nzAlign="center">
           <button nz-button nzType="text" nzBlock disabled>
             <i nz-icon nzType="setting"></i>
@@ -77,22 +84,22 @@
           >
           </td>
           <td>
-            <a nz-tooltip="进入工作区" [routerLink]="['/', data['namespace'], 'overview', 'cluster']">
+            <a nz-tooltip="Enter" [routerLink]="['/', data['namespace'], 'overview', 'cluster']">
               {{ data['name'] }}
             </a>
             <nz-tag>{{ data['namespace'] }}</nz-tag>
           </td>
           <td>
-            <a nz-tooltip="查看密钥" (click)="openAppKey()">{{ data['_id'] }}</a>
+            <a nz-tooltip="Check Key" (click)="openAppKey()">{{ data['_id'] }}</a>
           </td>
           <td>
             <ng-container *ngIf="data['status']; else isFalse">
-              <nz-badge nzStatus="processing"></nz-badge> 开启
+              <nz-badge nzStatus="processing"></nz-badge> On
             </ng-container>
-            <ng-template #isFalse> <nz-badge nzStatus="default"></nz-badge> 关闭 </ng-template>
+            <ng-template #isFalse> <nz-badge nzStatus="default"></nz-badge> Off </ng-template>
           </td>
           <td>
-            <ng-container *ngIf="data['expire'] === 0; else hasExpire">永久</ng-container>
+            <ng-container *ngIf="data['expire'] === 0; else hasExpire">permanent</ng-container>
             <ng-template #hasExpire>
               {{ data['expire'] * 1000 | date: 'yyyy-MM-dd' }}
             </ng-template>
@@ -105,26 +112,12 @@
             </button>
             <nz-dropdown-menu #menu="nzDropdownMenu">
               <ul nz-menu>
-                <li nz-menu-item>IP 白名单</li>
-                <li nz-menu-item (click)="form(data)">编辑</li>
-                <li nz-menu-item nzDanger (click)="delete(data)">删除</li>
+                <li nz-menu-item i18n>Entry</li>
+                <li nz-menu-item (click)="form(data)" i18n>Edit</li>
+                <li nz-menu-item nzDanger (click)="delete(data)" i18n>Delete</li>
               </ul>
             </nz-dropdown-menu>
           </td>
-        </tr>
-        <tr [nzExpand]="expand.has(data['_id'])">
-          <nz-descriptions [nzColumn]="1">
-            <nz-descriptions-item nzTitle="密钥">
-              <ng-container *ngIf="data['secret']; else unset">
-                <span nz-typography nzCopyable [nzContent]="data['secret']"></span>
-              </ng-container>
-            </nz-descriptions-item>
-            <nz-descriptions-item nzTitle="白名单入口">
-              <ng-container *ngIf="data['entry'].length !== 0; else unset">
-                {{ data['entry'] }}
-              </ng-container>
-            </nz-descriptions-item>
-          </nz-descriptions>
         </tr>
       </ng-container>
     </tbody>
@@ -132,3 +125,18 @@
 </nz-card>
 
 <ng-template #unset>未设置</ng-template>
+
+<!--<ng-template>-->
+<!--  <nz-descriptions [nzColumn]="1">-->
+<!--    <nz-descriptions-item nzTitle="密钥">-->
+<!--      <ng-container *ngIf="data['secret']; else unset">-->
+<!--        <span nz-typography nzCopyable [nzContent]="data['secret']"></span>-->
+<!--      </ng-container>-->
+<!--    </nz-descriptions-item>-->
+<!--    <nz-descriptions-item nzTitle="白名单入口">-->
+<!--      <ng-container *ngIf="data['entry'].length !== 0; else unset">-->
+<!--        {{ data['entry'] }}-->
+<!--      </ng-container>-->
+<!--    </nz-descriptions-item>-->
+<!--  </nz-descriptions>-->
+<!--</ng-template>-->
