--- a/src/app/admin/orgs/orgs.component.html
+++ b/src/app/admin/orgs/orgs.component.html
@@ -1,3 +1,40 @@
-<nz-layout>
-  <nz-sider nzWidth="200px" nzTheme="light"> </nz-sider>
+<nz-layout class="common-layout">
+  <nz-sider style="height: 100%" nzWidth="180px" nzTheme="light">
+    <ul nz-menu nzMode="inline" style="border: none">
+      <li nz-menu-group nzTitle="Users" i18n-nzTitle>
+        <ul>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'orgs', 'users']">
+            <span nz-icon nzType="team"></span>
+            <span i18n>Team</span>
+          </li>
+          <li nz-menu-item nzDisabled>
+            <span nz-icon nzType="coffee"></span>
+            <span i18n>Visitor</span>
+          </li>
+          <li nz-menu-item nzDisabled>
+            <span nz-icon nzType="usergroup-add"></span>
+            <span i18n>Group</span>
+          </li>
+        </ul>
+      </li>
+      <li nz-menu-group nzTitle="Permissions" i18n-nzTitle>
+        <ul>
+          <li nz-menu-item nzDisabled>
+            <span nz-icon nzType="bulb"></span>
+            <span i18n>Policy</span>
+          </li>
+          <li nz-menu-item nzDisabled>
+            <span nz-icon nzType="solution"></span>
+            <span i18n>Role</span>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nz-sider>
+
+  <nz-layout class="inner-layout">
+    <nz-content class="content">
+      <router-outlet></router-outlet>
+    </nz-content>
+  </nz-layout>
 </nz-layout>
