--- a/src/app/forget/forget.component.html
+++ b/src/app/forget/forget.component.html
@@ -1,10 +1,10 @@
 <nz-card [nzBordered]="false" [nzBorderless]="false">
-  <nz-page-header nzBackIcon nzTitle="Retrieve Your Password" i18n-nzTitle>
+  <nz-page-header nzBackIcon nzTitle="找回密码" i18n-nzTitle>
     <nz-page-header-content>
       <nz-steps style="padding: 16px" [nzCurrent]="step" nzProgressDot>
-        <nz-step nzTitle="Verify" i18n-nzTitle></nz-step>
-        <nz-step nzTitle="Reset" i18n-nzTitle></nz-step>
-        <nz-step nzTitle="Complete" i18n-nzTitle></nz-step>
+        <nz-step nzTitle="验证" i18n-nzTitle></nz-step>
+        <nz-step nzTitle="重置" i18n-nzTitle></nz-step>
+        <nz-step nzTitle="完成" i18n-nzTitle></nz-step>
       </nz-steps>
     </nz-page-header-content>
   </nz-page-header>
@@ -20,35 +20,37 @@
         (wpxSubmit)="verify($event)"
       >
         <nz-form-item>
-          <nz-form-label nzRequired i18n>Mode</nz-form-label>
+          <nz-form-label nzRequired i18n>模式</nz-form-label>
           <nz-form-control>
             <nz-select formControlName="mode">
-              <nz-option nzValue="email" nzLabel="Email" i18n-nzLabel></nz-option>
+              <nz-option nzValue="email" nzLabel="电子邮件" i18n-nzLabel></nz-option>
             </nz-select>
           </nz-form-control>
         </nz-form-item>
 
         <nz-form-item>
-          <nz-form-label nzRequired i18n>Email</nz-form-label>
+          <nz-form-label nzRequired i18n>电子邮件</nz-form-label>
           <nz-form-control nzHasFeedback [nzAutoTips]="tips.email">
-            <input type="email" formControlName="email" nz-input placeholder="mail@example.com" />
+            <input
+              type="email"
+              formControlName="email"
+              nz-input
+              placeholder="例如：mail@example.com"
+              i18n-placeholder
+            />
           </nz-form-control>
         </nz-form-item>
 
         <nz-form-item>
-          <nz-form-label nzRequired i18n>Verification Code</nz-form-label>
-          <nz-form-control
-            nzExtra="*Emails may be automatically blocked due to personal settings"
-            i18n-nzExtra
-            [nzAutoTips]="tips.captcha"
-          >
+          <nz-form-label nzRequired i18n>验证码</nz-form-label>
+          <nz-form-control nzExtra="*电子邮件可能会被个人设置拦截" i18n-nzExtra [nzAutoTips]="tips.captcha">
             <nz-input-group nzSearch [nzAddOnAfter]="getCaptchaBtn">
               <input nz-input formControlName="captcha" />
               <ng-template #getCaptchaBtn>
                 <button nz-button type="button" (click)="getCaptcha()" [disabled]="countdown !== 0">
-                  <ng-container *ngIf="!countdown; else countdownTpl" i18n>Get</ng-container>
+                  <ng-container *ngIf="!countdown; else countdownTpl" i18n>获取</ng-container>
                   <ng-template #countdownTpl>
-                    <span i18n>{{ countdown }} s</span>
+                    <span i18n>{{ countdown }} 秒</span>
                   </ng-template>
                 </button>
               </ng-template>
@@ -58,7 +60,7 @@
 
         <nz-form-item>
           <nz-form-control>
-            <button nz-button [disabled]="!verifyForm.value" i18n>Submit</button>
+            <button nz-button [disabled]="!verifyForm.value" i18n>提交</button>
           </nz-form-control>
         </nz-form-item>
       </form>
@@ -73,7 +75,7 @@
         (wpxSubmit)="submit($event)"
       >
         <nz-form-item>
-          <nz-form-label nzRequired i18n>New Password</nz-form-label>
+          <nz-form-label nzRequired i18n>新密码</nz-form-label>
           <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
             <nz-input-group [nzSuffix]="suffixTemplate">
               <ng-template #suffixTemplate>
@@ -88,7 +90,7 @@
                 nz-input
                 autocomplete="new-password"
                 formControlName="password"
-                placeholder="Please enter the new password"
+                placeholder="请输入新密码"
                 i18n-placeholder
               />
             </nz-input-group>
@@ -97,15 +99,15 @@
 
         <nz-form-item>
           <nz-form-control>
-            <button nz-button [disabled]="!pwdForm.value" i18n>Submit</button>
+            <button nz-button [disabled]="!pwdForm.value" i18n>提交</button>
           </nz-form-control>
         </nz-form-item>
       </form>
     </ng-container>
     <ng-container *ngSwitchCase="2">
-      <nz-result nzStatus="success" nzTitle="Your password has been updated" i18n-nzTitle>
+      <nz-result nzStatus="success" nzTitle="您的密码已更新" i18n-nzTitle>
         <div nz-result-extra>
-          <button nz-button nzType="primary" routerLink="/login" i18n>Back Sign In</button>
+          <button nz-button nzType="primary" routerLink="/login" i18n>返回登录页</button>
         </div>
       </nz-result>
     </ng-container>
