--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,22 @@
 <nz-card [nzBordered]="false" [nzBorderless]="false">
-  <div class="title" i18n>SIGN IN</div>
+  <div class="title" i18n>🚀 欢迎使用</div>
   <form [formGroup]="form" nz-form nzLayout="vertical" (wpxSubmit)="submit($event)">
     <nz-form-item>
-      <nz-form-label><b i18n>Email</b></nz-form-label>
+      <nz-form-label><b i18n>电子邮件</b></nz-form-label>
       <nz-form-control>
         <nz-input-group [nzSuffix]="identitySuffix" nzPrefixIcon="mail">
           <ng-template #identitySuffix>
             <span *ngIf="email.value" nz-icon nzType="close-circle" (click)="email.reset()"> </span>
           </ng-template>
-          <input type="email" nz-input formControlName="email" placeholder="Please enter email" i18n-placeholder />
+          <input type="email" nz-input formControlName="email" placeholder="请输入电子邮件" i18n-placeholder />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label>
-        <b i18n>Password</b>
-        <a style="margin-left: 0.5em" routerLink="/forget" i18n> forget？</a>
+        <b i18n>密码</b>
+        <a style="margin-left: 0.5em" routerLink="/forget" i18n>忘记了？</a>
       </nz-form-label>
       <nz-form-control>
         <nz-input-group [nzSuffix]="passwordSuffix" nzPrefixIcon="lock">
@@ -28,7 +28,7 @@
             type="password"
             formControlName="password"
             autocomplete="new-password"
-            placeholder="Please enter password"
+            placeholder="请输入密码"
             i18n-placeholder
           />
         </nz-input-group>
@@ -37,14 +37,14 @@
     <nz-form-item>
       <nz-form-control>
         <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid">
-          <b i18n>LOGIN</b>
+          <b i18n>登录</b>
         </button>
       </nz-form-control>
     </nz-form-item>
 
-    <nz-divider nzPlain nzText="OR" i18n-nzText></nz-divider>
+    <nz-divider nzPlain nzText="其他方式登录" i18n-nzText></nz-divider>
     <nz-space>
-      <a *nzSpaceItem nz-tooltip="Feishu" i18n-nz-tooltip (click)="feishuOAuth()">
+      <a *nzSpaceItem nz-tooltip="飞书" i18n-nz-tooltip (click)="feishuOAuth()">
         <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
       </a>
     </nz-space>
